src/ui/Breadcrumb/index.module.css
.breadcrumbs {
  padding: 0.5rem 1rem;
  background-color: var(--color-white);
  height: fit-content;
  width: fit-content;
  border-radius: 9999px;
  list-style: none;
  margin: 0;
}

/* TODO: コンポーネントが画面を気にしているのが気持ち悪いため見直す。 */
@media screen and (max-width: 1000px) {
  .breadcrumbs {
    width: 100%;
  }
}

.item {
  display: inline;
}

/* 祖先アイテムはラベルとシェブロンを分けず一塊として扱う */
.item:not(:last-child) {
  white-space: nowrap;
  margin-right: 0.5rem;
}

.item a {
  color: var(--color-link);
  text-decoration: underline;
}

.item svg {
  vertical-align: middle;
  margin-left: 0.5rem;
}

